--- a/src/components/Form/Form.module.css
+++ b/src/components/Form/Form.module.css
@@ -33,7 +33,7 @@
 
 .button{
     padding: 5px;
-    margin: auto;
+    margin: 10px auto;
     color: rgb(30, 247, 1);
     border-radius: 10px;
     border-color: black;
